--- a/191A_App/src/app/Forum/Forum.page.scss
+++ b/191A_App/src/app/Forum/Forum.page.scss
@@ -56,7 +56,6 @@ ion-title {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-self: center;
 }
 
 ion-textarea {
